[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/home/modal/photo-board.png" type="Texture" id=1]
[ext_resource path="res://assets/home/button/drawing.png" type="Texture" id=2]
[ext_resource path="res://assets/home/button/glow_pen.png" type="Texture" id=3]
[ext_resource path="res://assets/home/modal/images/pig.jpg" type="Texture" id=4]
[ext_resource path="res://assets/home/button/button-fun-paint-300.png" type="Texture" id=5]
[ext_resource path="res://assets/home/modal/frame4.png" type="Texture" id=6]
[ext_resource path="res://assets/home/modal/purple button.png" type="Texture" id=7]
[ext_resource path="res://assets/home/button/button-color-fill-300.png" type="Texture" id=8]
[ext_resource path="res://assets/bg/bg-home.png" type="Texture" id=9]
[ext_resource path="res://Popup.gd" type="Script" id=10]
[ext_resource path="res://ScrollContainer.gd" type="Script" id=11]
[ext_resource path="res://Home_Scene.gd" type="Script" id=12]
[ext_resource path="res://assets/paint/images/thumbnails/2.png" type="Texture" id=13]
[ext_resource path="res://assets/paint/images/thumbnails/1.png" type="Texture" id=14]
[ext_resource path="res://assets/paint/images/thumbnails/5.png" type="Texture" id=15]
[ext_resource path="res://assets/paint/images/thumbnails/6.png" type="Texture" id=16]
[ext_resource path="res://assets/paint/images/thumbnails/7.png" type="Texture" id=17]
[ext_resource path="res://assets/paint/images/thumbnails/8.png" type="Texture" id=18]
[ext_resource path="res://assets/paint/images/thumbnails/3.jpg" type="Texture" id=19]
[ext_resource path="res://assets/paint/images/thumbnails/4.png" type="Texture" id=20]
[ext_resource path="res://assets/paint/images/thumbnails/10.png" type="Texture" id=21]
[ext_resource path="res://assets/paint/images/thumbnails/9.png" type="Texture" id=22]
[ext_resource path="res://assets/particles/pngegg.png" type="Texture" id=23]
[ext_resource path="res://baby.tscn" type="PackedScene" id=24]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.27
emission_shape = 2
emission_box_extents = Vector3( 2000, 1, 1 )
flag_disable_z = true
spread = 111.06
flatness = 0.65
gravity = Vector3( 50, 98, 0 )
initial_velocity = 431.2
initial_velocity_random = 0.35
angular_velocity = 50.0
angular_velocity_random = 0.72
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 0.17
damping = 17.43
damping_random = 0.19
angle = 237.8
angle_random = 0.4
scale = 0.3
scale_random = 0.47

[node name="Home_Scene" type="Control"]
margin_right = 2160.0
margin_bottom = 1080.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 2.109
anchor_bottom = 1.8
margin_right = 2075.64
margin_bottom = 1008.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorFill" type="TextureButton" parent="."]
margin_left = 928.0
margin_top = 384.0
margin_right = 1228.0
margin_bottom = 684.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunPaint" type="TextureButton" parent="."]
margin_left = 1272.0
margin_top = 384.0
margin_right = 1572.0
margin_bottom = 684.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drawing" type="TextureButton" parent="."]
margin_left = 1604.0
margin_top = 388.0
margin_right = 1904.0
margin_bottom = 688.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlowPen" type="TextureButton" parent="."]
margin_left = 912.0
margin_top = 716.0
margin_right = 1212.0
margin_bottom = 1016.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_left = 335.0
margin_top = -900.0
margin_right = 1785.0
margin_bottom = -50.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Popup"]
margin_left = -1.0
margin_top = -116.0
margin_right = 1519.0
margin_bottom = 884.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Popup"]
margin_left = 1352.0
margin_top = -59.0
margin_right = 1504.0
margin_bottom = 84.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Popup"]
margin_left = 86.0
margin_top = 102.0
margin_right = 1386.0
margin_bottom = 782.0
scroll_horizontal_enabled = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Popup/ScrollContainer"]
margin_right = 1285.0
margin_bottom = 1466.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_right = 395.0
margin_bottom = 329.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect3"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 445.0
margin_right = 840.0
margin_bottom = 329.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect4"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 890.0
margin_right = 1285.0
margin_bottom = 329.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect5"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_top = 379.0
margin_right = 395.0
margin_bottom = 708.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect6"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 445.0
margin_top = 379.0
margin_right = 840.0
margin_bottom = 708.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect7"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 890.0
margin_top = 379.0
margin_right = 1285.0
margin_bottom = 708.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect8"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_top = 758.0
margin_right = 395.0
margin_bottom = 1087.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect9"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 445.0
margin_top = 758.0
margin_right = 840.0
margin_bottom = 1087.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect10"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 890.0
margin_top = 758.0
margin_right = 1285.0
margin_bottom = 1087.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect11"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect12" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_top = 1137.0
margin_right = 395.0
margin_bottom = 1466.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect12"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect13" type="TextureRect" parent="Popup/ScrollContainer/GridContainer"]
margin_left = 445.0
margin_top = 1137.0
margin_right = 840.0
margin_bottom = 1466.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="TextureButton" parent="Popup/ScrollContainer/GridContainer/TextureRect13"]
margin_left = 35.0
margin_top = 31.0
margin_right = 361.0
margin_bottom = 349.0
mouse_filter = 1
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 288, -4 )
scale = Vector2( 0.2, 0.2 )
z_index = 100
amount = 3
lifetime = 20.0
speed_scale = 3.0
explosiveness = 0.11
randomness = 0.33
process_material = SubResource( 1 )
texture = ExtResource( 23 )

[node name="Node2D" parent="." instance=ExtResource( 24 )]
position = Vector2( 64, 52 )

[node name="Node2D2" parent="." instance=ExtResource( 24 )]
position = Vector2( 1356, 72 )

[connection signal="pressed" from="ColorFill" to="." method="_on_ColorFill_pressed"]
[connection signal="pressed" from="ColorFill" to="Popup" method="_on_ColorFill_pressed"]
[connection signal="pressed" from="FunPaint" to="." method="_on_FunPaint_pressed"]
[connection signal="pressed" from="FunPaint" to="Popup" method="_on_FunPaint_pressed"]
[connection signal="pressed" from="Drawing" to="." method="_on_Drawing_pressed"]
[connection signal="pressed" from="GlowPen" to="." method="_on_GlowPen_pressed"]
[connection signal="pressed" from="Popup/TextureButton" to="Popup" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect3/0" to="." method="_on_Pig_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect4/1" to="." method="_on_Cat_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect5/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect6/3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect7/4" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect8/5" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect9/6" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect10/7" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect11/8" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect12/9" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Popup/ScrollContainer/GridContainer/TextureRect13/10" to="." method="_on_TextureButton3_pressed"]
